# VIBE

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  justfile  pyproject.toml
examples/: mapping.json
notebooks/: cookbook.ipynb
requirements/: requirements-dev.txt  requirements.txt
scripts/: inference.py  inference_template.sh
src/: __init__.py  editor.py
src/generative_pipeline/: __init__.py  sana_editing_pipeline.py
src/transformer/: __init__.py  sana_editing.py
src/utils/: __init__.py  img_utils.py  retry_utils.py
vibe/: editor.py
vibe/generative_pipeline/: __init__.py  vibe_sana_pipeline.py
vibe/transformer/: __init__.py  edit_head.py  vibe_sana_editing.py
