# Linters and Formatters
[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
target-version = "py311"
indent-width = 4
line-length = 120
output-format = "grouped"
respect-gitignore = true
show-fixes = true
extend-exclude = ["cookbook.ipynb"]

[tool.ruff.format]
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "YTT", # flake8-2020
    "CPY", # flake8-copyright
    "FA", # flake8-future-annotations
    "TD", # flake8-todos
    "C90", # mccabe
    "PGH", # pygrep-hooks

    # disable these rules to use the ruff formatter.
    "COM819", # prohibited-trailing-comma
    "D206",   # docstring-tab-indentation
    "D300",   # triple-single-quotes
    "E111",   # indentation-with-invalid-multiple
    "E114",   # indentation-with-invalid-multiple-comment
    "E117",   # over-indented
    "Q000",   # bad-quotes-inline-string
    "Q001",   # bad-quotes-multiline-string
    "Q002",   # bad-quotes-docstring
    "Q003",   # avoidable-escaped-quote
    "W191",   # tab-indentation
    "PTH103", # path-concatenation
    "PTH118", # path-concatenation
    "PTH123", # open file with Path
    "PTH119", # replace os.basename with Path.stem
    "PTH120", # replace os.path.dirname with Path.parent
    "PTH110", # one more pathlib related rule
    "EXE002", # The file is executable but no shebang is present
    "COM812",
    "G004",   # use f-string for logging
]
task-tags = ["EDIT", "SANA", "QWEN", "VIBE"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]   # ignore unused imports in __init__.py files
"scripts/inference.py" = ["INP001"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true  # suppress ANN401 for *args and **kwargs

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe"
version = "1.0.0"

[tool.setuptools.packages.find]
where = ["."]
